--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-<<<<<<< HEAD
 .idea
-=======
-.idea
-<<<<<<< HEAD
+*.map
 .DS_Store
-=======
->>>>>>> c5954f66326790cc795888ae4c6e7cecf4b983af
->>>>>>> 1f314a187eabf9e94de3611293679c8963e24520
